Serialize/Deserialize System Dumps straight into/from archive #7312